syntax = "proto3";

package testapis;

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}

message Message {
  string body = 1;
}

message EchoRequest {
  Message message = 1;
}


message EchoResponse {
  Message message = 1;
}
